fixed ID being cut off and going to a new line. except on Tasks

--- a/css/Action Items.css
+++ b/css/Action Items.css
@@ -59,6 +59,7 @@ th{
 
 th, td{
     padding:10px;
+    width:100px;
 }
 
 tr:nth-child(even) {
