--- a/css/Tasks.css
+++ b/css/Tasks.css
@@ -55,12 +55,11 @@ th{
     background-color:#4CAF50;
     color:white;
     height:50px;
-    width: 100%;
 }
 
 th, td{
     padding:10px;
-    padding-right: 50px;
+    width:100px;
 }
 
 tr:nth-child(even) {
